import("//react-native/common.gni")

config("LibRNDeviceInfo_config") {
  cflags_cc = [ "-std=c++17"]
  cflags_cc += [
    "-Wno-extra-semi",
    "-Wno-sign-compare",
    "-Wno-header-hygiene",
  ]

  include_dirs = [ ".",
                  "//react-native/ReactCommon/",
                ]
}

rns_cxx_tp_component("rndeviceinfo") {

  # Native module and its dependencies
  sources = [
    "RNDeviceInfo.h",
    "RNDeviceInfo.cpp",
  ]

  public_configs = [ ":LibRNDeviceInfo_config" ]
  public_configs += [ "//build/secondary/folly:folly_config" ]
  deps = [
    "//folly",
    "//skia",
  ]

  with_exceptions = true
  with_rtti = true
}
